# health-check-example

./: Cargo.toml  README.md
fastly-rust/docs/: Snippet.md  SnippetResponse.md
fastly-rust/src/apis/: healthcheck_api.rs
src/: main.rs
