[package]
name = "health_check_test"
version = "0.1.0"
edition = "2021"

[dependencies]
patch-fastly-api = { package = "fastly-api", version = "*", path = "./fastly-rust/", optional = true }
fastly-api = { version = "4", optional = true }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
 
[features]
default = ["dep:fastly-api"]
fix = ["dep:patch-fastly-api"]